# adversarial-library

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: python-publish.yml
adv_lib/: __init__.py
adv_lib/attacks/: __init__.py  augmented_lagrangian.py  auto_pgd.py  boundary_projection.py  decoupled_direction_norm.py  deepfool.py  fast_minimum_norm.py  primal_dual_gradient_descent.py  projected_gradient_descent.py  sigma_zero.py  stochastic_sparse_attacks.py  structured_adversarial_attack.py  superdeepfool.py  trust_region.py  voting_folded_gaussian.py
adv_lib/attacks/augmented_lagrangian_attacks/: __init__.py  alma.py
adv_lib/attacks/carlini_wagner/: __init__.py  l2.py  linf.py
adv_lib/attacks/fast_adaptive_boundary/: __init__.py  fast_adaptive_boundary.py  original_fab.py  projections.py
adv_lib/attacks/perceptual_color_attacks/: __init__.py  differential_color_functions.py  perceptual_color_distance_al.py
adv_lib/attacks/segmentation/: __init__.py  alma_prox.py  asma.py  dense_adversary.py  primal_dual_gradient_descent.py
adv_lib/attacks/sparse_stochastic_adversarial_attacks/: __init__.py  voting_folded_gaussian.py
adv_lib/distances/: color_difference.py  lp_norms.py  lpips.py  structural_similarity.py
adv_lib/utils/: __init__.py  attack_utils.py  color_conversions.py  image_selection.py  losses.py  optimizers.py  projections.py  utils.py  visdom_logger.py
adv_lib/utils/lagrangian_penalties/: __init__.py  all_penalties.py  penalty_functions.py  univariate_functions.py
adv_lib/utils/lagrangian_penalties/scripts/: plot_penalties.py  plot_univariates.py
tests/: lagrangian_penalties.py  test_attacks.py
tests/distances/: test_color_difference.py  test_structural_similarity.py
tests/utils/lagrangian_penalties/: test_penalty_functions.py  test_univariate_functions.py
