[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "adv-lib"
dynamic = ["version"]
authors = [
    { name = "Jerome Rony", email = "jerome.rony@gmail.com" },
]
description = "Library of various adversarial attacks resources in PyTorch"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.8.0",
    "torchvision>=0.9.0",
    "tqdm>=4.48.0",
    "visdom>=0.1.8",
]

[tool.setuptools]
packages = ["adv_lib"]

[tool.setuptools.dynamic]
version = { attr = "adv_lib.__version__" }

[project.optional-dependencies]
test = ["scikit-image", "pytest"]

[project.urls]
Repository = "https://github.com/jeromerony/adversarial-library.git"